--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=SecondChance-back
 
 ## ?? ?? application ?? ?????
-spring.profiles.include=kakao
+spring.profiles.include=information
