[feature] 로컬 DB에 저장까지 완료했고, 내일 ResponseEntity 손보기

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-application-kakao.properties
+application-information.properties
 
 ### STS ###
 .apt_generated
