[main] properties 파일 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,18 @@
 spring.application.name=SecondChance-back
 
-## ?? ?? application ?? ?????
-spring.profiles.include=information
+## kakao client id
+kakao.request.client_id=${CLIENT_ID}
+## kakao redirect_uri
+kakao.redirect_uri=${REDIRECT_URI}
+## kakao secret key
+kakao.client_secret=${CLIENT_SECRET}
+
+spring.datasource.url=${DB_URL}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
