--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = '0.0.1'
 
 java {
     sourceCompatibility = '17'
@@ -27,7 +27,6 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    runtimeOnly 'com.h2database:h2'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.0'
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
