--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.5'
-    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2' //for deploy
+    //implementation 'com.h2database:h2:1.4.200' //for test
 }
 
 tasks.named('test') {
