--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,5 @@
 spring.application.name=SecondChance-back
 
-## kakao client id
-kakao.request.client_id=${CLIENT_ID}
-## kakao redirect_uri
-kakao.redirect_uri=${REDIRECT_URI}
-## kakao secret key
-kakao.client_secret=${CLIENT_SECRET}
-
 spring.datasource.url=${DB_URL}
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=${USERNAME}
@@ -16,3 +9,24 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+##Kakao
+#Kakao registration
+spring.security.oauth2.client.registration.kakao.client-name=Kakao
+spring.security.oauth2.client.registration.kakao.client-id=${CLIENT_ID}
+spring.security.oauth2.client.registration.kakao.client-secret=${CLIENT_SECRET}
+spring.security.oauth2.client.registration.kakao.redirect-uri=${REDIRECT_URI}
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=${GRANT_TYPE}
+spring.security.oauth2.client.registration.kakao.scope=${PROFILE_THINGS}
+spring.security.oauth2.client.registration.kakao.client-authentication-method=${A_METHOD}
+#Kakao provider
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+frontend.address=${ADDRESS}
+spring.jwt.secret=${SECRET}
+encoding.password=${PASSWORD_ENCODER}
+## if success, open page
+redirect.location=${OPEN_PAGE}
